syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

message CustomerOnSAIdRequest {
    int32 CustomerOnSAId = 1;
}